# micoservice

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md
base/: CMakeLists.txt  base_msg.json  base_msg_json_tools.c  base_msg_json_tools.h  base_types.c  base_types.h  deploy.json  deploy_json_tools.c  deploy_json_tools.h  filetrans.json  filetrans_json_tools.c  filetrans_json_tools.h  node.json  node_json_tools.c  node_json_tools.h  service_info.json  service_info_json_tools.c  service_info_json_tools.h
comm/: CMakeLists.txt  RPC_README.md  abs_comm.h  comm_fan_in_out.h  rpc.c  rpc.h
comm/amp-shm/: shm_registry_center.c
comm/crpc/: crpc_registry_center.c
micoservice/: CMakeLists.txt  mico_service.c  mico_service.h  mico_service_comm.c
mstracing/: CMakeLists.txt  agent.c  agent.h  collector.c  collector.h  collector_http_server.c  collector_http_server.h  mstracing.c  mstracing.h  mstracing_api.http  span.json  span_context.json  span_context_json_tools.c  span_context_json_tools.h  span_json_tools.c  span_json_tools.h  uuid4.c  uuid4.h
node/: CMakeLists.txt  node_loader.c  node_loader.h
registry/: CMakeLists.txt  http_server.c  http_server.h  node_center.c  node_center.h  node_center_cmd.c  registry.c  registry.h  registry_api.http
test/: CMakeLists.txt  lb_recv.c  lb_send.c  micoservice_test.c  mstracing_test1.c  mstracing_test2.c  node_loader_test.c  registry_i_test.c  rpc_example.c  rpc_sync_test.c  shm_amp_config.c  shm_registry.c  shm_test.h  test1.c  test2.c  tracing_test.c
test/config/: microservice-config.json  node-config.json  node.json  node1.json  node2.json  test1.json  test2.json
util/: CMakeLists.txt  cf_log.c  cf_log.h  mongoose.c  mongoose.h  snow_flake.c  snow_flake.h  uintptr2string.h
